--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,33 +8,17 @@
         body {
             font-family: 'Times New Roman', Times, serif;
             color: black; /* Ensuring the text color is black */
-            background-color:#EFF177;
+            background-image: url("https://cdn.vectorstock.com/i/1000x1000/48/06/geometric-simple-black-and-white-minimalistic-vector-9864806.webp");
+            background-repeat: no-repeat; /* Prevents the image from repeating */
+            background-size: cover; /* Scales the background image to be as large as possible so that the background area is completely covered by the background image */
+            background-position: center; /* Centers the background image */
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             overflow: hidden; /* Prevent scrolling */
         }
-       .geometricElement {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-            animation: pulse 2s ease-in-out infinite;
-        }
-        @keyframes pulse {
-            0% {
-                clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
-            }
-            50% {
-                clip-path: polygon(0% 0%, 90% 0%, 100% 100%, 10% 100%);
-            }
-            100% {
-                clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
-            }
-        }
+       
        .container {
             background-color: #fff;
             padding: 40px;
